--- a/styles/second.css
+++ b/styles/second.css
@@ -65,17 +65,19 @@ nav ul li a {
 .banner-section {
   max-width: 1140px;
   display: flex;
-
   margin: 0 auto;
   margin-top: 100px;
 }
 
 .banner-left {
-  width: 50%;
+  /* width: 50%; */
   display: flex;
   flex-direction: column;
   gap: 13px;
   justify-content: center;
+}
+.banner-right {
+  width: 50%;
 }
 .banner-title {
   font-weight: bold;
@@ -160,6 +162,130 @@ nav ul li a {
   /* border-radius:8px */
 }
 
+.plants-lover-section {
+  margin: 0 auto;
+  max-width: 1140px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+}
+.plants-lover-left {
+  max-width: 540px;
+  height: 597px;
+  width: 100%;
+}
+.plants-lover-right {
+  max-width: 540px;
+}
+.plants-lover-title {
+  font-weight: bold;
+  font-size: 3.2rem;
+  color: #000000;
+}
+
+.plants-lover-description {
+  max-width: 540px;
+  display: flex;
+  flex-direction: column;
+}
+.plants-lover-list {
+  margin-top: 1.2rem;
+  height: 5rem;
+  font-size: 1.25rem;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+/* Join Section Styles */
+
+.join-section {
+  max-width: 1440px;
+  margin: 0 auto;
+  margin-top: 100px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  height: 533px;
+  background-image: url("../assets/news-letter-bg.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.join-title {
+  font-weight: bold;
+  font-size: 3rem;
+  color: #ffffff;
+}
+.join-input {
+  display: flex;
+}
+.input-email {
+  width: 644px;
+  height: 50px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  padding: 1rem;
+}
+
+.join-btn {
+  width: 186px;
+  height: 50px;
+  border: none;
+  background-color: #e95a08;
+  color: #ffffff;
+}
+.footer-section {
+  max-width: 1120px;
+  max-height: 348px;
+  margin: 0 auto;
+  margin-top: 50px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-description {
+  font-size: 1.25rem;
+  max-width: 270px;
+  color: #6b7280;
+  margin-top: 1rem;
+}
+
+.footer-contact1 ul,
+.footer-contact2 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer-contact1 ul li,
+.footer-contact2 ul li {
+  list-style-type: none;
+  color: #6b7280;
+}
+
+.link-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.latest-deal-section {
+  border: 1px solid black;
+  text-align: center;
+}
+.latest-info {
+}
+
+.latest-title {
+  font-weight: bold;
+  font-size: 3rem;
+}
+.latest-title-color {
+}
+
 /* Mobile Media */
 @media screen and (min-width: 480px) and (max-width: 768px) {
   .nav-section {
@@ -195,20 +321,68 @@ nav ul li a {
     order: 0;
     margin: 28px 25px 65px;
   }
+  .banner-right {
+    width: 100%;
+  }
 
   .banner-right {
     order: -1;
   }
+
+  /* Card Container */
+
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    row-gap: 30px;
+    place-self: center;
+    max-width: 364px;
+  }
+
+  .card {
+    max-width: 170px;
+    text-align: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+  }
+
+  #card1,
+  #card2 {
+    display: none;
+  }
+  .plants-lover-section {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .plants-lover-title {
+    font-weight: bold;
+    font-size: 2rem;
+  }
+
+  /* Join Section Styles */
 }
 
 /* Medium or Tablet Media */
 
-@media screen and (min-width: 779px) and (max-width: 1024px) {
+@media screen and (min-width: 779px) and (max-width: 1124px) {
   .nav-section {
     margin: 16px 20px 28px;
   }
 
   .banner-section {
     margin: 20px;
+  }
+
+  .plants-lover-section {
+    width: 100%;
+    /* flex-direction: column; */
+    gap: 2%;
+  }
+  .plants-lover-left {
+    width: 49%;
+  }
+  .plants-lover-right {
+    width: 49%;
   }
 }
