--- a/styles/second.css
+++ b/styles/second.css
@@ -227,16 +227,26 @@ nav ul li a {
   font-size: 3rem;
   color: #ffffff;
 }
-.join-input {
+.join-input-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.input-email {
-  width: 644px;
+.join-input input[type="email"] {
+  width: 500px;
   height: 50px;
+  padding: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border: none;
-  padding: 1rem;
 }
+
+/* .input-email {
+  display: inline;
+  max-width: 644px;
+  height: 50px;
+  
+  padding: 1rem;
+} */
 
 .join-btn {
   width: 186px;
@@ -245,6 +255,7 @@ nav ul li a {
   background-color: #e95a08;
   color: #ffffff;
 }
+
 .footer-section {
   max-width: 1120px;
   max-height: 348px;
@@ -405,6 +416,7 @@ nav ul li a {
     flex-direction: column;
     gap: 1rem;
     margin-left: 2rem;
+    margin-top: 1rem;
   }
   .plants-lover-title {
     font-weight: bold;
@@ -439,6 +451,19 @@ nav ul li a {
     display: flex;
     flex-direction: column;
     gap: 50px;
+  }
+
+  .join-input input[type="email"] {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+  }
+  .join-title {
+    font-weight: bold;
+    font-size: 1.25rem;
+    color: #ffffff;
   }
 
   /* Join Section Styles */
